--- a/src/app/pages/register-dream/register-dream.component.css
+++ b/src/app/pages/register-dream/register-dream.component.css
@@ -1,115 +1,166 @@
+
+
 .extrabold{
-    font-weight: 520;
-  }
-  
-  .buttons{
-    width: 100%;
-    margin-top: 14px;
-    margin-bottom: 1px;
-  }
-  
-  .link:hover{
-    color: midnightblue;
-    font-size: 12px;
-  }
-  
-  .link{
-    color: dimgray;
-    font-size: 12px;
-  }
-  
-  .center{
-    width: auto;
-  }
-  
-  .fullWidth{
-    width: 100%;
-  }
-  
-  .toggle{
+  font-weight: 520;
+}
+
+.buttons{
+  width: 100%;
+  margin-top: 14px;
+  margin-bottom: 1px;
+}
+
+.link:hover{
+  color: midnightblue;
+  font-size: 12px;
+}
+
+.link{
+  color: dimgray;
+  font-size: 12px;
+}
+
+.center{
+  width: auto;
+}
+
+.fullWidth{
+  width: 100%;
+
+}
+.fullWidth-center{
+  width: 100%;
+ 
+}
+.fullWidth-trilha{
+  width: 100%;
+  border:1px solid rgba(211, 202, 202, 0.521);
+  border-radius: 10px;
+  margin-top: 20px;
+}
+.fullWidth-trilha h2{
+  margin:auto;
+  margin-left: 45%;
+  font-weight: bold;
+  font-variant:all-petite-caps;
+}
+.center-content{
+  text-align: center;
+  width: 100%;
+}
+.toggle{
+  text-align: right;
+}
+
+.circleImg{
+    border-radius: 50%;
+    width: 50px;
+}
+
+.grid {
+    display: grid;
+}
+
+.a {
+    grid-area: a;
+  align-self: center;
+  font-size: 25px;
+  font-weight: 500;
+  padding-right: 4px;
+}
+
+.b {
+    grid-area: b;
+  align-self: center;
+  padding-left: 2px;
+}
+
+
+
+.grid-template-areas-1 {
+    grid-template-columns: 65px auto;
+    grid-template-rows: 70px;
+      grid-template-areas:
+        "b a"
+        ;
+}
+
+/* Grid Item */
+.item {
+  color:blueviolet;
+    margin: 3px;
+    /* background: tomato; */
+    text-align: center;
+    /* font-size: 1.5em; */
+}
+
+.right {
     text-align: right;
-  }
+}
+
+.subTitle{
+  text-align: center;
+  font-size: 20px;
+}
+
+.mp{
+  margin: 0px;
+  margin-right: 6px;
+  padding: 0px;
+  text-align: center;
+  display: inline;
+}
+
+.iconRightButton{
+  padding-right: 6px;
+}
+
+.buttons:hover span{
+  color:#00FA9A;
+  margin-right: 2px;
+}
+
+
+.btn-emoji{
+  background: transparent;
+  border: 0;
+  cursor: pointer;
+  text-align: left;
+  float: right;
+}
+
+input{
+  height: 120%;
+}
+#input-passo{
+  margin-left: 20%;
+}
+.btn-site{
+  margin-left: 3%;
+  width:20px ;
+  padding:2px;
+  font-size: smaller;
   
-  .circleImg{
-      border-radius: 50%;
-      width: 50px;
-  }
+}
+#checkbox{
+  float:left;
+  margin-left: 5px;
+  position: relative;
+}
+.editable-cell{
+  font-size: 16px;
+  font-style: italic;
+  margin-left: 5px;
+  display:inline-block;
   
-  .grid {
-      display: grid;
-  }
-  
-  .a {
-      grid-area: a;
-    align-self: center;
-    font-size: 25px;
-    font-weight: 500;
-    padding-right: 4px;
-  }
-  
-  .b {
-      grid-area: b;
-    align-self: center;
-    padding-left: 2px;
-  }
-  
-  
-  
-  .grid-template-areas-1 {
-      grid-template-columns: 65px auto;
-      grid-template-rows: 70px;
-        grid-template-areas:
-          "b a"
-          ;
-  }
-  
-  /* Grid Item */
-  .item {
-    color:blueviolet;
-      margin: 3px;
-      /* background: tomato; */
-      text-align: center;
-      /* font-size: 1.5em; */
-  }
-  
-  .right {
-      text-align: right;
-  }
-  
-  .subTitle{
-    text-align: center;
-    font-size: 20px;
-  }
-  
-  .mp{
-    margin: 0px;
-    margin-right: 6px;
-    padding: 0px;
-    text-align: center;
-    display: inline;
-  }
-  
-  .iconRightButton{
-    padding-right: 6px;
-  }
-  
-  .buttons:hover span{
-    color:#00FA9A;
-    margin-right: 2px;
-  }
-  
-  
-  .btn-emoji{
-    background: transparent;
-    border: 0;
-    cursor: pointer;
-    text-align: left;
-    float: right;
-  }
-  
-  input{
-    height: 120%;
-  }
-  .btn-site{
-    margin-left: 3%;
-  }
+}
+#buttonRemove{
+ float:right;
+ margin-right: 10px;
+ background-color: rgb(177, 37, 37);
+ border:#202221 1px solid;
+
+}
+.centredText{
+ text-align: center;
+}
