--- a/src/app/pages/register-dream/register-dream.component.css
+++ b/src/app/pages/register-dream/register-dream.component.css
@@ -188,6 +188,7 @@ input{
 .overflow{
   overflow-y: auto;
   max-height: 80px;
+  position:relative;
 }
 .overflow input{
   margin-left: 5px;
@@ -195,3 +196,14 @@ input{
   font-size: 16px;
   font-style: italic;
 }
+.overflow input:focus{
+  margin-left: 5px;
+  border:rgba(211, 202, 202, 0.521) 1px solid !important;
+  font-size: 16px;
+  font-style: italic;
+}
+
+/* #btn-delete{
+  float:right !important;
+  bottom:9px !important;
+} */
