--- a/src/app/dialogs/dialog/dialog.component.html
+++ b/src/app/dialogs/dialog/dialog.component.html
@@ -1,6 +1,13 @@
+<div class="dialog-ExibeSonho">
 <h1 mat-dialog-title>
     {{sonho.nomeSonhador}}
 </h1>
+<button mat-mini-fab color="primary" matTooltip="Oferecer ajuda">
+  <mat-icon>
+    <span class="material-icons-outlined">volunteer_activism</span>
+  </mat-icon>
+</button>
+</div>
 <div mat-dialog-content>
   <div>
     <h2>Sonho:</h2>
