clebercrventura: [Tarefa inserir tooltip]

--- a/src/app/dialogs/dialog/dialog.component.html
+++ b/src/app/dialogs/dialog/dialog.component.html
@@ -22,4 +22,9 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button mat-dialog-close>Fechar</button>
+  <button mat-icon-button color="warn" class="btn-report" matTooltip="Denunciar sonho">
+    <mat-icon>
+      <span class="material-icons-outlined">report</span>
+    </mat-icon>
+  </button>
 </div>
