--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -33,6 +33,9 @@ p{
   padding: 6px 20px;
   border-radius: 10px;
 }
+.mat-btn-MeusSonhos{
+  color: #1976d2;
+}
 
 .vertical-center {
   margin: 0;
@@ -174,11 +177,15 @@ p{
   
 }
 /* -----------Div de itens no menu , distribuição e alinhamento----- */
+.tema-select{
+  width: 100px;
+  margin-top: 10px;
+  
+}  
 .itens_nav{
- 
+  margin-right: 30px;
   grid-area: b;
   padding-left: 16px;
-  margin-top: 10px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -255,6 +262,7 @@ p{
 .nav{
   box-shadow: 0 0 1em rgba(46, 46, 46, 0.534);
   background-color: rgb(255, 255, 255);
+  height: 85px;
 }
 
 .buttons span{
