clebercrventura: [Tarefas ajustes de texto (ENG to PT)]

--- a/src/app/dialogs/dialog/dialog.component.html
+++ b/src/app/dialogs/dialog/dialog.component.html
@@ -39,14 +39,14 @@
   <mat-icon>
     <span class="material-icons-outlined">thumb_up</span>
   </mat-icon>
-  <span > Curtir</span>
+  <span >&nbsp; Curtir</span>
   </button>
 
   <button mat-flat-button color="itens" (click)="EmDesenvolvimento()">
     <mat-icon>
       <span class="material-icons-outlined">volunteer_activism</span>
     </mat-icon>
-    <span class="span-itens"> Oferecer Ajuda</span>
+    <span class="span-itens">&nbsp; Ajudar</span>
   </button>
   
   
@@ -54,7 +54,7 @@
     <mat-icon>
       <span class="material-icons-outlined">upload</span>
     </mat-icon>
-    <span >Compartilhar</span>
+    <span >&nbsp; Compartilhar</span>
   </button>
   
   <!-- <button mat-stroked-button mat-dialog-close>Fechar</button> -->
