--- a/src/app/pages/autenticate/autenticate.component.html
+++ b/src/app/pages/autenticate/autenticate.component.html
@@ -61,9 +61,9 @@
 
 <ng-template #btLogar>
     <div class="buttons" (click)="RecuperarSenha()">
-        <p class="center link">Forgot your password?</p>
+        <p class="center link">Esqueceu a senha?</p>
     </div>
     <div class="buttons">
-        <p (click)="AtualizarStatusRegistrar()" class="center link">Novo no Before I Die? Crie sua conta gratuitamente aqui</p>
+        <p (click)="AtualizarStatusRegistrar()" class="center link">Novo no Trilha Sonhos? &nbsp; Crie sua conta gratuitamente</p>
     </div>
 </ng-template>
