--- a/src/app/pages/register-dream/register-dream.component.html
+++ b/src/app/pages/register-dream/register-dream.component.html
@@ -1,6 +1,6 @@
-<section class="grid grid-template-areas-1">
-    <div class="item b"><img src="../assets/logo-bfd-2.png" class="circleImg"></div>
-</section>
+ <!-- <section class="grid grid-template-areas-1">
+     <div class="item b"><img src="../assets/logo-bfd-2.png" class="circleImg"></div> 
+</section>  -->
 <div class="item a" style="color:#282d6c"><span>Registro de Sonho</span></div>
 <!-- <h1 mat-dialog-title class="subTitle" >Before I Die</h1> -->
 <form novalidate [formGroup]="formUser" style="width: 100%;">
@@ -32,7 +32,7 @@
 
     <div class="center-content">
         <mat-form-field>
-            <mat-label>Tenho que fazer isso...</mat-label>
+            <mat-label>Incluir passo na trilha...</mat-label>
             <input matInput [(ngModel)]="descricaoTrilha" autocomplete="false">
         </mat-form-field>
 
